--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,9 @@ body {
   color: white;
   background-image: url('/src/assets/fondo.jpg');
   background-size: cover;
-  background-position: center center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 h1 {
